# basicRaytracer

./: .gitignore  CMakeLists.txt  INSTALL  README.md
.github/workflows/: main.yml
Google_tests/: CMakeLists.txt  test_mathLib.cpp  test_raytracer.cpp
examples/: exampleScene.h  notIntersectingYTriangle.blend  reversedTriangle.blend  tiltedTriangle.blend  triangle.blend  twoTriangle.blend
raytracerExperiment/: geometries.h  main.c  raytracer.c  raytracer.h  test_vector.c  test_vector.h  utils.c  utils.h  vector.c  vector.h
raytracerExperiment/tests/: test_raytracer.c  test_raytracer.h  test_vector.c
scripts/: makeMovie.sh
src/: bmpWriter.c  bmpWriter.h  geometries.c  geometries.h  ioLib.c  ioLib.h  main.c  mathLib.c  mathLib.h  raytracer.c  raytracer.h  renderSettings.h  sceneEntities.c  sceneEntities.h  sceneParser.c  sceneParser.h  transform.c  transform.h  utils.c  utils.h  vector.c  vector.h
src/tests/: runAllTests.c  test_bmpWriter.c  test_bmpWriter.h  test_mathLib.c  test_raytracer.c  test_raytracer.h  test_transform.c  test_utils.c  test_utils.h  test_vector.c  test_vector.h
tests/: CMakeLists.txt  test_bmpWriter.cpp  test_ioLib.cpp  test_mathLib.cpp  test_raytracer.cpp  test_transform.cpp
